# vla_ros2

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  benchmark_request.yml  bug_report.yml  config.yml  ros2_runtime.yml
.github/workflows/: ci.yml  docs.yml  gazebo-nightly.yml
docs/: adapter_contract.md  architecture.md  benchmark_design.md  benchmark_results.md  comparisons.md  deployment.md  groot_remote.md  index.html  openvla_local_runtime.md  openvla_remote.md  pi0_remote.md  release_v0.1.0.md  ros2_integration.md  safety.md  smolvla_local_runtime.md  smolvla_remote.md
docs/adapters/: README.md  dummy.md  groot.md  openvla.md  pi0.md  random.md  scripted.md  smolvla.md
docs/assets/: action_playground.html  action_playground.json  action_playground_check.json  action_playground_remote_dummy.json  action_playground_remote_dummy_check.json  action_playground_with_remote.html  action_playground_with_remote.json  artifact_index.html  artifact_index.json  gz_smolvla_compare_metrics.json  gz_smolvla_demo_base_metrics.json  gz_smolvla_demo_finetuned_metrics.json  gz_smolvla_offline_base_metrics.json  gz_smolvla_offline_finetuned_metrics.json  openvla_local_runtime.json  pi0_server_plan.json  ros2_remote_smoke_plan.json  ros2_remote_smoke_plan.md  sample_action_analysis.json  sample_action_analysis.md  sample_action_trace.html  sample_ros_runtime_dashboard.html  sample_runtime_comparison.json  sample_runtime_dashboard.html  sample_runtime_report.html  smolvla_local_runtime.json  smolvla_remote_smoke_plan.json  smolvla_remote_smoke_plan.md  vla_compare_local.json  vla_compare_openvla.json  vla_compare_pi0.json  vla_compare_smolvla_finetuned.json  vla_compare_summary.json  vla_model_evidence_matrix.html  vla_model_evidence_matrix.json  vla_model_evidence_matrix.md
docs/assets/gif_suite/: README.md  gif_check.json  gif_check.md  gif_manifest.json  index.html
docs/assets/leaderboard/: vla_runtime_leaderboard.html  vla_runtime_leaderboard.json  vla_runtime_leaderboard.md
docs/assets/quickstart/: report.html  report.json  report.md
docs/assets/roofline/: vla_roofline.json  vla_roofline.md
docs/assets/rtc_sim/: rtc_scheduler_sim.json  rtc_scheduler_sim.md  smolvla_rtc_compare.json  smolvla_rtc_compare.md  (+1 more)
docs/reports/: model_comparison.md  remote_runtime_smoke.md
examples/compare/: pybullet_dummy_remote.json  pybullet_vla_remote.json
examples/python/: load_dummy.py  load_openvla.py  load_pi0_remote.py  load_smolvla.py  openvla_remote_probe.py  remote_client.py  smolvla_remote_client.py
examples/ros2/: diagnostics_sample.jsonl  echo_action.py  moveit_servo_bridge.py  publish_instruction.py  remote_smoke_plan.json  remote_smoke_plan.md  ros2_control_bridge.py  vla_status_sample.jsonl
examples/serve/: pi0_server_plan.md  vla_gpu_servers.json  vla_gpu_servers.md
notes/: 2026-06-08_gazebo_closed_loop.md  2026-06-08_real_robot_bringup.md  2026-06-09_smolvla_base_vs_finetuned.md
ros2/: BRINGUP.md  SIM.md  WORKSPACE.md
ros2/vla_ros2/: package.xml  setup.cfg  setup.py
ros2/vla_ros2/config/: bringup.dashcam.example.yaml  controller_bridge.example.yaml  dummy.yaml  openvla.yaml  robot.example.yaml
ros2/vla_ros2/launch/: action_replay.launch.py  bringup_phase_c.launch.py  controller_bridge.launch.py  dummy.launch.py  log_recorder.launch.py  openvla.launch.py  smoke.launch.py  smoke_record.launch.py
ros2/vla_ros2/tests/: test_smoke_launch.py
ros2/vla_ros2/vla_ros2_ros/: __init__.py  action_parse.py  action_replay.py  controller_bridge.py  converters.py  log_recorder.py  node.py  params.py  smoke_input.py  smolvla_input.py
ros2/vla_ros2_gz/: package.xml  setup.cfg  setup.py
ros2/vla_ros2_gz/config/: gz_smoke.yaml  gz_smolvla.yaml  vla_arm_controllers.yaml
ros2/vla_ros2_gz/launch/: gz_arm.launch.py  gz_smoke.launch.py  gz_smolvla.launch.py
ros2/vla_ros2_gz/tests/: test_action_bridge.py  test_smolvla_joint_mapping.py
ros2/vla_ros2_gz/urdf/: vla_arm.urdf.xacro
ros2/vla_ros2_gz/vla_ros2_gz_ros/: action_bridge.py  smolvla_joint_bridge.py
ros2/vla_ros2_msgs/: CMakeLists.txt  package.xml
ros2/vla_ros2_msgs/msg/: VLAActionChunk.msg  VLAStatus.msg
ros2/vla_zoo/: package.xml  setup.cfg  setup.py
ros2/vla_zoo_msgs/: CMakeLists.txt  package.xml
ros2/vla_zoo_msgs/msg/: VLAAction.msg  VLAActionChunk.msg  VLAInstruction.msg
scripts/: bootstrap_ros2_workspace.sh  bringup_validate.sh  compare_vla_models.py  finetune_smolvla_so100.sh  generate_demo_assets.py  generate_readme_gifs.py  generate_simulation_gif.py  gz_smoke_probe.py  gz_smoke_validate.sh  gz_smolvla_validate.sh  launch_playground_gz.sh  measure_lerobot_runtime.py  measure_openvla_runtime.py  publish_instruction.py  record_finetuned_gz_demo.sh  record_gz_smolvla_compare.sh  record_gz_smolvla_demo.py  record_gz_smolvla_demo.sh  record_ros2_remote_trace.py  record_runtime_demo.sh  record_sim_demo.py  record_smolvla_so100_demo.py  vla_gz_env.sh  vla_playground.py  vla_playground_ros_bridge.py
src/vla_ros2/: __init__.py  compare.py
src/vla_zoo/: __init__.py
tests/: conftest.py  test_action_parse.py  test_action_playground.py  test_action_spec.py  test_action_trace.py  test_adapter_cards.py  test_baseline_adapters.py  test_benchmark_aggregate.py  test_benchmark_external.py  test_benchmark_replay.py  test_benchmark_report.py  test_benchmark_results.py  test_cli.py  test_compare.py  test_compare_suite.py  test_compatibility.py  test_control_bridge.py  test_dashboard.py  test_demo_action_probe.py  test_demo_pybullet.py  test_docs_index.py  test_docs_links.py  test_doctor.py  test_dummy_adapter.py  test_evidence.py  test_gazebo_smolvla.py  test_gif_suite.py  test_gpu_smoke.py  test_groot.py  test_leaderboard.py  test_load_model.py  test_method_profiles.py  test_openvla_adapter.py  test_pi0_adapter.py  test_pi0_remote.py  test_pybullet_compare.py  test_quickstart.py  test_realtime_chunking.py  test_registry.py  test_remote_probe.py  (+17 more)
(+189 files in other folders)
