[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "vla_zoo"
version = "0.1.0"
description = "ROS2-native runtime, benchmark, and adapter hub for Vision-Language-Action models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "vla_zoo contributors"}]
keywords = ["robotics", "ros2", "vision-language-action", "vla", "embodied-ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pydantic>=2",
  "pillow>=10",
  "typing-extensions>=4.8",
  # The `vla-zoo` console script imports typer at module load, so it is a core
  # dependency: `pip install vla_zoo` must yield a working CLI on its own.
  "typer>=0.12",
  "rich>=13",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "httpx>=0.27,<0.28"]
# Kept as an alias so existing `vla_zoo[cli]` installs keep working; the CLI deps
# are now part of the base install above.
cli = ["typer>=0.12", "rich>=13"]
gpu = ["torch"]
openvla = [
  "torch",
  "transformers==4.40.1",
  "timm>=0.9.10,<1.0.0",
  "tokenizers==0.19.1",
  "accelerate",
  "einops",
]
openpi = ["lerobot>=0.5.1,<0.6.0"]
smolvla = ["lerobot[smolvla]>=0.5.1,<0.6.0"]
groot = []
bench = ["pandas", "tqdm"]
sim = ["pybullet>=3.2"]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "types-Pillow",
  "setuptools",
  "lark",
  "jinja2",
  "typeguard",
]
all = ["vla_zoo[server,cli,openvla,bench]"]

[project.urls]
Homepage = "https://github.com/rsasaki0109/vla_zoo"
Documentation = "https://github.com/rsasaki0109/vla_zoo/tree/main/docs"
Issues = "https://github.com/rsasaki0109/vla_zoo/issues"
Repository = "https://github.com/rsasaki0109/vla_zoo"

[project.scripts]
vla-zoo = "vla_zoo.cli.main:app"

[project.entry-points."vla_zoo.adapters"]
dummy = "vla_zoo.adapters.dummy:DummyAdapter"
random = "vla_zoo.adapters.baselines:RandomAdapter"
scripted = "vla_zoo.adapters.baselines:ScriptedAdapter"
openvla = "vla_zoo.adapters.openvla:OpenVLAAdapter"
pi0 = "vla_zoo.adapters.pi0:Pi0Adapter"
smolvla = "vla_zoo.adapters.smolvla:SmolVLAAdapter"
groot = "vla_zoo.adapters.groot:GR00TAdapter"

[tool.hatch.build.targets.wheel]
packages = ["src/vla_zoo"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
packages = ["vla_zoo"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_subclassing_any = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
