[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "vla_ros2"
version = "0.1.0"
description = "ROS2-native on-robot runtime for Vision-Language-Action models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "vla_ros2 contributors"}]
keywords = ["robotics", "ros2", "vision-language-action", "vla", "embodied-ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pydantic>=2",
  "pillow>=10",
  "typing-extensions>=4.8",
  # The `vla-ros2` console script imports typer at module load, so it is a core
  # dependency: `pip install vla_ros2` must yield a working CLI on its own.
  "typer>=0.12",
  "rich>=13",
]

[project.optional-dependencies]
gpu = ["torch"]
openvla = [
  "torch",
  "transformers==4.40.1",
  "timm>=0.9.10,<1.0.0",
  "tokenizers==0.19.1",
  "accelerate",
  "einops",
]
openpi = ["lerobot>=0.5.1,<0.6.0"]
smolvla = ["lerobot[smolvla]>=0.5.1,<0.6.0"]
playground = ["gradio>=4.0"]
groot = []
# Optional: PyBullet sim used only by scripts/record_sim_demo.py (the README GIF).
sim = ["pybullet>=3.2"]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "types-Pillow",
  "setuptools",
  "typeguard",
]
all = ["vla_ros2[openvla]"]

[project.urls]
Homepage = "https://github.com/rsasaki0109/vla_ros2"
Documentation = "https://github.com/rsasaki0109/vla_ros2/tree/main/ros2"
Issues = "https://github.com/rsasaki0109/vla_ros2/issues"
Repository = "https://github.com/rsasaki0109/vla_ros2"

[project.scripts]
vla-ros2 = "vla_ros2.cli.main:app"

[project.entry-points."vla_ros2.adapters"]
dummy = "vla_ros2.adapters.dummy:DummyAdapter"
random = "vla_ros2.adapters.baselines:RandomAdapter"
scripted = "vla_ros2.adapters.baselines:ScriptedAdapter"
openvla = "vla_ros2.adapters.openvla:OpenVLAAdapter"
pi0 = "vla_ros2.adapters.pi0:Pi0Adapter"
smolvla = "vla_ros2.adapters.smolvla:SmolVLAAdapter"
groot = "vla_ros2.adapters.groot:GR00TAdapter"

[tool.hatch.build.targets.wheel]
packages = ["src/vla_ros2"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
packages = ["vla_ros2"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_subclassing_any = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
