<?xml version="1.0"?>
<package format="3">
  <name>vla_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 runtime node and launch files for vla_ros2.</description>
  <maintainer email="maintainers@example.com">vla_ros2 contributors</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>vla_ros2_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
